Bug 524915: Quoted comments can overflow the comment box r=glob,a=justdave

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -323,6 +323,9 @@ div#docslinks {
     color: #65379c;
     /* Make quoted text not wrap. */
     white-space: pre;
+    overflow: auto;
+    display: block;
+    margin-bottom: -1em;
 }
 
 .bz_comment_user, .bz_comment_time, .bz_comment_number, 
